# benefactor

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  benefactor.example.json  handoff.md  run-wide.sh  run_harness_interactive.sh  run_pc_game.sh  tools_seed_converge.sh
benefactor-pc/: CMakeLists.txt
benefactor-pc/src/: common_log.h  engine.c  engine.h  main.c  pc_overrides.c  pc_overrides_gameplay.c  pc_overrides_hw.c  recomp_main.c  repl.c  test_main.c
benefactor-pc/src/amiga/: blitter.c  blitter.h  cia.c  cia.h  copper.c  copper.h  cpu.c  cpu.h  custom.c  custom.h  disk.c  disk.h  memory.c  memory.h  paula.c  paula.h
benefactor-pc/src/harness/: HARNESS_REFACTORING.md  harness_compare.c  harness_main.c  harness_main_old.c  harness_puae.c  puae_state.h
benefactor-pc/src/platform/: display.c  input.h
benefactor-pc/src/recomp/: disk_boot.h  hw_copper.c  native_renderer.c  rt.h
benefactor-pc/tools/: analyze_divergence_root_cause.py  fb_view.py  patch_vposr.py  run_with_timeout.py  test_anim_blt.py  test_frame_ptrs.py  test_harness_boot.py  test_input.py  test_recomp.py  verify_disks.py
benefactor-pc/tools/recomp/: analyze.py  discover_gp.py  entries.py  extract_jumptables.py  gp_seeds.txt  helpers.py  recomp.py  validate.py
docs/: build-and-run.md  capstone-m68k-facts.md  codebase-layout.md  handoff.md  hardware-layer.md  project-overview.md  recompiler-notes.md  recompiler.md  working-agreements.md
instructions/: README.md  audio-engine.md  benmotion-plan.md  create-override.md  current-state.md  gameplay-engine-map.md  gpu-renderer-plan.md  harness.md  master-workflow.md  recompiler.md  remaining-issues.md  rom-analysis.md  run-harness.md  scratchpad.md  widescreen-plan.md
scripts/: build.sh  run-wide.sh  run_harness_interactive.sh  run_pc_game.sh  tools_seed_converge.sh
skills/: README.md  create-override.md  debug-journal.md  diagnose-divergence.md  recompiler.md  rom-analysis.md  run-harness.md
src/: game_state.h  main.c  pc.c  pc.h  pc_config.c  pc_config.h  pc_http_debug.c  pc_input.c  pc_internal.h  pc_level_select_ui.c  pc_main.c  pc_menu.c  pc_overrides.c  pc_overrides_audio.c  pc_overrides_boot.c  pc_overrides_copper.c  pc_overrides_gameplay.c  pc_overrides_pickup.c  pc_overrides_render.c  pc_overrides_title.c  pc_pause_menu.c
src/common/: game_state.h
src/engine/: disk_boot.c  hw.c  hw.h  hw_audio.c  hw_blitter.c  hw_private.h  overlay_load.c  overlay_load.h  rt.c  rt.h
src/harness/: harness_compare.c  harness_compat.h  harness_frontend.c  harness_internal.h  harness_main.c  harness_puae.c  input.c  input.h  png_dump.c  puae_snap_impl.c  puae_state.h  trace.c  trace.h
src/platform/: audio.c  audio.h  display.h  input.c
src/port/: config.c  config.h  freecam.c  game_loop.c  http_debug.c  hud_icons.c  input.c  input.h  level_select_ui.c  pause_menu.c  port.h  port_internal.h  profile.c
src/port/overrides/: audio.c  boot.c  copper.c  gameplay.c  hw.c  pickup.c  platformer.c  register.c  render.c
src/recomp/: disk_boot.c  hw.c  hw.h  hw_audio.c  hw_blitter.c  hw_private.h  native_engine_view.c  native_renderer.c  overlay_load.c  rt.c  rt.h
src/render/: engine_view.c  engine_view.h  native_renderer.c  native_renderer.h  present_backend.h  present_sdl.c  present_vulkan.c  scene.c  scene.h  scene_sdl.c  scene_sdl.h
src/render/shaders/: blit.frag  blit.vert
tools/: autoplay_levels.sh  disasm2.py  disasm_boot.py  dump_banks.c  extract_chipram_from_roms.py  extract_whdload_data.py  fb_png.py  regen.sh  test_recomp.py
tools/recomp/: __init__.py  check_unregistered_targets.py  credits_seeds.txt  discover_benefactor_targets.py  discover_gp.py  discover_indirect.py  discover_object_handlers.py  discovered.py  emitter.py  extract_jumptables.py  gp_seeds.txt  gpl_seeds.txt  recomp.py  scanner.py  seeds_loader.py  step1_disasm.py  step2_descent.py
tools/recomp/seeds/: 01-entry-irq.txt  02-overlay-load.txt  05-player-anim.txt  06a-engine-core.txt  06b-objects-world.txt  06c-objects-level.txt  06d-engine-tables.txt  07-engine-subs.txt  09-dispatch-stragglers.txt  zz-discovered.txt
