cmake_minimum_required(VERSION 3.20)
project(benefactor-pc C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

# Debug: emit per-instruction trace hooks (rt_trace_insn) in generated code so
# BENEFACTOR_M68K_TRACE=1 can dump a PC-side instruction trace for comparison
# against the PUAE side. Configure with -DBENEFACTOR_TRACE_INSNS=ON.
option(BENEFACTOR_TRACE_INSNS "Emit per-instruction trace hooks" OFF)
if(BENEFACTOR_TRACE_INSNS)
  add_compile_definitions(RT_TRACE_INSNS)
endif()

# ── Dependencies ─────────────────────────────────────────────────────────────

# SDL2
find_package(SDL2 REQUIRED)

# ── PUAE chip dump input ──────────────────────────────────────────────────────
# Canonical source: chip_ram_dump.bin at repository root.
# Generate/update it from ROMs + WHDLoad disks with:
#   python3 tools/extract_chipram_from_roms.py --output chip_ram_dump.bin
set(CHIP_DUMP_INPUT "${CMAKE_CURRENT_SOURCE_DIR}/../chip_ram_dump.bin")

# ── Recompiler (68k → C) ─────────────────────────────────────────────────────
# NOTE: these set() calls must appear before add_custom_command so the OUTPUT
# and DEPENDS variables expand to their correct paths.

set(RECOMPILER      "${CMAKE_CURRENT_SOURCE_DIR}/tools/recomp/recomp.py")
set(RECOMP_DIR      "${CMAKE_CURRENT_SOURCE_DIR}/tools/recomp")
set(GEN_DIR         "${CMAKE_CURRENT_SOURCE_DIR}/src/generated")
set(GAME_H          "${GEN_DIR}/game.h")
set(GAME_SRCS
    "${GEN_DIR}/game_boot.c"
    "${GEN_DIR}/game_blitter.c"
    "${GEN_DIR}/game_loop.c"
    "${GEN_DIR}/game_sprite.c"
    "${GEN_DIR}/game_render.c"
    "${GEN_DIR}/game_timer.c"
    "${GEN_DIR}/game_animation.c"
    "${GEN_DIR}/game_discovered.c"
    "${GEN_DIR}/game_misc.c"
)

# Gameplay overlay bank — recompiled from the disk overlay that replaces the
# intro at the same addresses (entry $3330, a5=$511E code-base). Generated by
# (run from repo root; --seed MUST be the FULL list from tools/recomp/gp_seeds.txt,
# not just 3330 — the extra seeds are indirectly-reached entries that static
# descent from 3330 alone misses, dropping ~16 of the 44 functions):
#   SEEDS=$(cat benefactor-pc/tools/recomp/gp_seeds.txt)
#   python3 benefactor-pc/tools/recomp/recomp.py logs/chip_flow_256_0081D2.bin \
#     --chip-dump --base 3000 --code-size 46000 --seed "$SEEDS" \
#     --bank gp --areg 5=511E --out-dir benefactor-pc/src/generated
# Committed as source for now (no auto-regen until a canonical gameplay image
# artifact is checked in). rt.c selects this bank when g_overlay_active.
#
# The gameplay-engine bank (game_gpl_*) is generated MANUALLY (no auto-regen).
# The seed list is tracked + annotated in tools/recomp/gpl_seeds.txt (the
# indirect-dispatch targets static descent can't reach). Regenerate with:
#   python3 benefactor-pc/tools/recomp/recomp.py logs/gmem_after_load.bin \
#     --chip-dump --base 3000 --code-size 5A0000 --areg 5=57EE12 --bank gpl \
#     --out-dir benefactor-pc/src/generated \
#     --seed "$(cat benefactor-pc/tools/recomp/gpl_seeds.txt)"
# (RECOMP_FOLD_LOOPS unset = goto-based DBcc, always compiles.)
# A skipped call = dropped work = corrupt state, so rt.c HARD-ERRORS on a
# gameplay-bank miss. Discover new seeds by running gameplay and watching for
# "[rt-miss] $X" — add X to gpl_seeds.txt and regenerate (the card->cavern work
# on 2026-05-29 added ~22 this way). scanner.py does iterative constant-target
# descent; emitter.py converts cross-function branches/DBcc to known entries
# into tail rt_jump so overlapping seeds (e.g. 57B0EE/57BA74) compile.
# Gameplay runs 1500 frames clean (no misses, no hang) + renders the level-intro
# card. Card->cavern advance ($3914->$3484) is the next gate (not input-driven).
set(GP_GAME_SRCS
    "${GEN_DIR}/game_gp_0.c"
    "${GEN_DIR}/game_gp_table.c"
    "${GEN_DIR}/game_gpl_0.c"
    "${GEN_DIR}/game_gpl_table.c"
)

file(MAKE_DIRECTORY "${GEN_DIR}")

# The generated 68k → C files (game.c, game_gp_*, game_gpl_*) live in
# src/generated/ and are checked into the repo. The build uses them as-is, so
# a user with the disks alone can build without running the recompiler.
#
# The 'recompile_game' target below regenerates them from chip_ram_dump.bin
# (which you extract from your own disks via tools/extract_chipram_from_roms.py).
# It is intentionally NOT a build dependency of the executables — run it
# explicitly when you've changed the recompiler or the seed list.
if(EXISTS "${CHIP_DUMP_INPUT}")
    add_custom_command(
        OUTPUT  ${GAME_SRCS} "${GAME_H}"
        COMMAND python3 "${RECOMPILER}"
                "${CHIP_DUMP_INPUT}" --chip-dump
                --out-dir "${GEN_DIR}"
        DEPENDS "${RECOMPILER}" "${CHIP_DUMP_INPUT}" "${RECOMP_DIR}/entries.py"
                "${RECOMP_DIR}/emitter.py" "${RECOMP_DIR}/scanner.py" "${RECOMP_DIR}/helpers.py"
        COMMENT "Recompiling 68k code from PUAE chip RAM dump"
    )
    add_custom_target(recompile_game DEPENDS ${GAME_SRCS} "${GAME_H}")
else()
    add_custom_target(recompile_game
        COMMENT "chip_ram_dump.bin not found at repo root; using committed src/generated/ as-is. "
                "Run tools/extract_chipram_from_roms.py if you want to regenerate.")
endif()

# ── Main executable (canonical PC runtime path) ───────────────────────────────

add_executable(benefactor-pc
    src/pc_main.c
    src/pc.c
    src/pc_overrides.c
    src/pc_overrides_hw.c
    src/pc_overrides_boot.c
    src/pc_overrides_copper.c
    src/pc_overrides_render.c
    src/pc_overrides_gameplay.c
    src/pc.h
    src/pc_internal.h
    src/recomp/rt.c
    src/recomp/hw.c
    src/recomp/hw_audio.c
    src/recomp/hw_blitter.c
    src/recomp/hw_copper.c
    src/recomp/native_renderer.c
    src/recomp/disk_boot.c
    ${GAME_SRCS}
    ${GP_GAME_SRCS}
)

# (recompile_game is opt-in; not a build dependency — see note above)

target_include_directories(benefactor-pc PRIVATE
    src
    ${SDL2_INCLUDE_DIRS}
)

target_link_libraries(benefactor-pc PRIVATE ${SDL2_LIBRARIES} m)
target_compile_options(benefactor-pc PRIVATE -Wall -Wextra -g)

# ── Comparison harness (PUAE reference + PC-port recompiler) ─────────────────
#
# Builds one binary that:
#   1. Runs PUAE (libretro-uae) for N frames as the reference interpreter
#   2. Runs our static-recompiler PC port for N frames
#   3. After each phase, compares copper, bitplane ptrs, palette, DFF regs
#
# All PUAE sources are compiled directly into the binary (same-TU access
# to statics in custom.c via the HARNESS_BUILD #include trick).

set(PUAE_ROOT   "${CMAKE_CURRENT_SOURCE_DIR}/vendor/libretro-uae")
set(PUAE_EMU    "${PUAE_ROOT}/sources/src")
set(PUAE_RETRO  "${PUAE_ROOT}/libretro")
set(PUAE_RETRODEP "${PUAE_ROOT}/retrodep")
set(PUAE_DEPS   "${PUAE_ROOT}/deps")
set(PUAE_COMM   "${PUAE_ROOT}/libretro-common")

# Generate the Musashi-style CPU emulation tables (m68kmake → m68kops.c/h)
# libretro-uae ships pre-generated cpuemu_*.c files so we skip the generator.
# The cpuemu files ARE in sources/src/ already.

set(PUAE_EMU_SOURCES
    ${PUAE_EMU}/a2065.c
    ${PUAE_EMU}/a2091.c
    ${PUAE_EMU}/akiko.c
    ${PUAE_EMU}/amax.c
    ${PUAE_EMU}/ar.c
    ${PUAE_EMU}/arcadia.c
    ${PUAE_EMU}/aros.rom.c
    ${PUAE_EMU}/audio.c
    ${PUAE_EMU}/autoconf.c
    ${PUAE_EMU}/blitfunc.c
    ${PUAE_EMU}/blittable.c
    ${PUAE_EMU}/blitter.c
    ${PUAE_EMU}/blkdev.c
    ${PUAE_EMU}/blkdev_cdimage.c
    ${PUAE_EMU}/bsdsocket.c
    ${PUAE_EMU}/calc.c
    ${PUAE_EMU}/caps/caps.c
    ${PUAE_EMU}/caps/uae_dlopen.c
    ${PUAE_EMU}/cd32_fmv.c
    ${PUAE_EMU}/cd32_fmv_genlock.c
    ${PUAE_EMU}/cda_play.c
    ${PUAE_EMU}/cdrom.c
    ${PUAE_EMU}/cdtv.c
    ${PUAE_EMU}/cdtvcr.c
    ${PUAE_EMU}/cfgfile.c
    ${PUAE_EMU}/cia.c
    ${PUAE_EMU}/cpuboard.c
    ${PUAE_EMU}/cpudefs.c
    ${PUAE_EMU}/cpuemu_0.c
    ${PUAE_EMU}/cpuemu_11.c
    ${PUAE_EMU}/cpuemu_13.c
    ${PUAE_EMU}/cpuemu_20.c
    ${PUAE_EMU}/cpuemu_21.c
    ${PUAE_EMU}/cpuemu_22.c
    ${PUAE_EMU}/cpuemu_23.c
    ${PUAE_EMU}/cpuemu_24.c
    ${PUAE_EMU}/cpuemu_31.c
    ${PUAE_EMU}/cpuemu_32.c
    ${PUAE_EMU}/cpuemu_33.c
    ${PUAE_EMU}/cpuemu_34.c
    ${PUAE_EMU}/cpuemu_35.c
    ${PUAE_EMU}/cpuemu_40.c
    ${PUAE_EMU}/cpuemu_50.c
    ${PUAE_EMU}/cpummu.c
    ${PUAE_EMU}/cpummu30.c
    ${PUAE_EMU}/cpustbl.c
    ${PUAE_EMU}/crc32.c
    ${PUAE_EMU}/custom.c
    ${PUAE_EMU}/debug.c
    ${PUAE_EMU}/debugmem.c
    ${PUAE_EMU}/devices.c
    ${PUAE_EMU}/disasm.c
    ${PUAE_EMU}/disk.c
    ${PUAE_EMU}/diskutil.c
    ${PUAE_EMU}/dongle.c
    ${PUAE_EMU}/draco.c
    ${PUAE_EMU}/drawing.c
    ${PUAE_EMU}/driveclick.c
    ${PUAE_EMU}/ethernet.c
    ${PUAE_EMU}/events.c
    ${PUAE_EMU}/expansion.c
    ${PUAE_EMU}/fdi2raw.c
    ${PUAE_EMU}/filesys.c
    ${PUAE_EMU}/filesys_unix.c
    ${PUAE_EMU}/flashrom.c
    ${PUAE_EMU}/fpp.c
    ${PUAE_EMU}/fpp_native.c
    ${PUAE_EMU}/fpp_softfloat.c
    ${PUAE_EMU}/fsdb.c
    ${PUAE_EMU}/fsdb_unix.c
    ${PUAE_EMU}/fsusage.c
    ${PUAE_EMU}/gayle.c
    ${PUAE_EMU}/gfxboard.c
    ${PUAE_EMU}/gfxlib.c
    ${PUAE_EMU}/gfxutil.c
    ${PUAE_EMU}/hardfile.c
    ${PUAE_EMU}/hardfile_unix.c
    ${PUAE_EMU}/hrtmon.rom.c
    ${PUAE_EMU}/ide.c
    ${PUAE_EMU}/idecontrollers.c
    ${PUAE_EMU}/identify.c
    ${PUAE_EMU}/ini.c
    ${PUAE_EMU}/inputdevice.c
    ${PUAE_EMU}/isofs.c
    ${PUAE_EMU}/keybuf.c
    ${PUAE_EMU}/main.c
    ${PUAE_EMU}/memory.c
    ${PUAE_EMU}/misc.c
    ${PUAE_EMU}/missing.c
    ${PUAE_EMU}/native2amiga.c
    ${PUAE_EMU}/ncr_scsi.c
    ${PUAE_EMU}/ncr9x_scsi.c
    ${PUAE_EMU}/newcpu.c
    ${PUAE_EMU}/newcpu_common.c
    ${PUAE_EMU}/pci.c
    ${PUAE_EMU}/picasso96.c
    ${PUAE_EMU}/readcpu.c
    ${PUAE_EMU}/rommgr.c
    ${PUAE_EMU}/rtc.c
    ${PUAE_EMU}/sampler.c
    ${PUAE_EMU}/sana2.c
    ${PUAE_EMU}/savestate.c
    ${PUAE_EMU}/scsi.c
    ${PUAE_EMU}/scsiemul.c
    ${PUAE_EMU}/scsitape.c
    ${PUAE_EMU}/sndboard.c
    ${PUAE_EMU}/specialmonitors.c
    ${PUAE_EMU}/statusline.c
    ${PUAE_EMU}/test_card.c
    ${PUAE_EMU}/traps.c
    ${PUAE_EMU}/uaelib.c
    ${PUAE_EMU}/uaenet.c
    ${PUAE_EMU}/uaeresource.c
    ${PUAE_EMU}/uaeserial.c
    ${PUAE_EMU}/writelog.c
    ${PUAE_EMU}/x86.c
    ${PUAE_EMU}/zfile.c
    ${PUAE_EMU}/zfile_archive.c
    ${PUAE_EMU}/dsp3210/dsp_glue.c
    ${PUAE_EMU}/dsp3210/DSP3210_emulation.c
    ${PUAE_EMU}/softfloat/softfloat.c
    ${PUAE_EMU}/softfloat/softfloat_decimal.c
    ${PUAE_EMU}/softfloat/softfloat_fpsp.c
    # archiver support
    ${PUAE_EMU}/archivers/dms/crc_csum.c
    ${PUAE_EMU}/archivers/dms/getbits.c
    ${PUAE_EMU}/archivers/dms/maketbl.c
    ${PUAE_EMU}/archivers/dms/pfile.c
    ${PUAE_EMU}/archivers/dms/tables.c
    ${PUAE_EMU}/archivers/dms/u_deep.c
    ${PUAE_EMU}/archivers/dms/u_heavy.c
    ${PUAE_EMU}/archivers/dms/u_init.c
    ${PUAE_EMU}/archivers/dms/u_medium.c
    ${PUAE_EMU}/archivers/dms/u_quick.c
    ${PUAE_EMU}/archivers/dms/u_rle.c
    ${PUAE_EMU}/archivers/lha/crcio.c
    ${PUAE_EMU}/archivers/lha/dhuf.c
    ${PUAE_EMU}/archivers/lha/header.c
    ${PUAE_EMU}/archivers/lha/huf.c
    ${PUAE_EMU}/archivers/lha/larc.c
    ${PUAE_EMU}/archivers/lha/lhamaketbl.c
    ${PUAE_EMU}/archivers/lha/lharc.c
    ${PUAE_EMU}/archivers/lha/shuf.c
    ${PUAE_EMU}/archivers/lha/slide.c
    ${PUAE_EMU}/archivers/lha/uae_lha.c
    ${PUAE_EMU}/archivers/lha/util.c
    ${PUAE_EMU}/archivers/mp2/kjmp2.c
)

set(PUAE_RETRO_SOURCES
    # libretro UI layer (provides retro_init/retro_load_game/m68k_go plumbing)
    ${PUAE_RETRO}/libretro-core.c
    ${PUAE_RETRO}/libretro-glue.c
    ${PUAE_RETRO}/libretro-mapper.c
    ${PUAE_RETRO}/libretro-vkbd.c
    ${PUAE_RETRO}/libretro-graph.c
    ${PUAE_RETRO}/libretro-dc.c
    # retrodep platform stubs (null audio, null video, etc.)
    ${PUAE_RETRODEP}/gui.c
    ${PUAE_RETRODEP}/main.c
    ${PUAE_RETRODEP}/mman.c
    ${PUAE_RETRODEP}/parser.c
    ${PUAE_RETRODEP}/serial_host.c
    ${PUAE_RETRODEP}/machdep/support.c
    ${PUAE_RETRODEP}/sounddep/sound.c
    ${PUAE_RETRODEP}/threaddep/thread.c
    ${PUAE_RETRODEP}/stubs/inputrecord.c
    # NOTE: WHDLoad_*.c and driveclick_wav.c are #include-d directly by
    # libretro-core.c and driveclick.c respectively — do NOT add them here.
)

set(PUAE_DEPS_SOURCES
    ${PUAE_DEPS}/libz/unzip.c
    ${PUAE_DEPS}/libz/ioapi.c
    ${PUAE_DEPS}/libz/adler32.c
    ${PUAE_DEPS}/libz/crc32.c
    ${PUAE_DEPS}/libz/deflate.c
    ${PUAE_DEPS}/libz/gzclose.c
    ${PUAE_DEPS}/libz/gzlib.c
    ${PUAE_DEPS}/libz/gzread.c
    ${PUAE_DEPS}/libz/gzwrite.c
    ${PUAE_DEPS}/libz/inffast.c
    ${PUAE_DEPS}/libz/inflate.c
    ${PUAE_DEPS}/libz/inftrees.c
    ${PUAE_DEPS}/libz/trees.c
    ${PUAE_DEPS}/libz/zutil.c
    ${PUAE_DEPS}/7zip/7zArcIn.c
    ${PUAE_DEPS}/7zip/7zBuf.c
    ${PUAE_DEPS}/7zip/7zCrc.c
    ${PUAE_DEPS}/7zip/7zCrcOpt.c
    ${PUAE_DEPS}/7zip/7zDec.c
    ${PUAE_DEPS}/7zip/7zFile.c
    ${PUAE_DEPS}/7zip/7zStream.c
    ${PUAE_DEPS}/7zip/Bcj2.c
    ${PUAE_DEPS}/7zip/Bra.c
    ${PUAE_DEPS}/7zip/Bra86.c
    ${PUAE_DEPS}/7zip/BraIA64.c
    ${PUAE_DEPS}/7zip/CpuArch.c
    ${PUAE_DEPS}/7zip/Delta.c
    ${PUAE_DEPS}/7zip/Lzma2Dec.c
    ${PUAE_DEPS}/7zip/LzmaDec.c
    ${PUAE_COMM}/compat/compat_strl.c
    ${PUAE_COMM}/compat/compat_strcasestr.c
    ${PUAE_COMM}/compat/fopen_utf8.c
    ${PUAE_COMM}/encodings/encoding_utf.c
    ${PUAE_COMM}/file/file_path.c
    ${PUAE_COMM}/file/file_path_io.c
    ${PUAE_COMM}/file/retro_dirent.c
    ${PUAE_COMM}/streams/file_stream.c
    ${PUAE_COMM}/streams/file_stream_transforms.c
    ${PUAE_COMM}/string/stdstring.c
    ${PUAE_COMM}/time/rtime.c
    ${PUAE_COMM}/vfs/vfs_implementation.c
)

set(HARNESS_SOURCES
    src/harness/harness_main.c
    src/harness/harness_puae.c
    src/harness/harness_compare.c
    src/harness/harness_frontend.c
    src/harness/input.c
    src/harness/trace.c
    # PC-port side
    src/recomp/rt.c
    src/recomp/hw.c
    src/recomp/hw_audio.c
    src/recomp/hw_blitter.c
    src/recomp/hw_copper.c
    src/recomp/native_renderer.c
    src/recomp/disk_boot.c
    src/pc.c
    src/pc_overrides.c
    src/pc_overrides_hw.c
    src/pc_overrides_boot.c
    src/pc_overrides_copper.c
    src/pc_overrides_render.c
    src/pc_overrides_gameplay.c
    ${GAME_SRCS}
    ${GP_GAME_SRCS}
)

add_executable(benefactor-harness
    ${PUAE_EMU_SOURCES}
    ${PUAE_RETRO_SOURCES}
    ${PUAE_DEPS_SOURCES}
    ${HARNESS_SOURCES}
)

# (recompile_game is opt-in; not a build dependency — see note above)

target_compile_definitions(benefactor-harness PRIVATE
    __LIBRETRO__
    INLINE=inline
    HAVE_ZLIB
    HAVE_7ZIP
    _7ZIP_ST
    USE_LIBRETRO_VFS
    HARNESS_BUILD          # enables custom.c #include + hw.c snap function
    SDL_DISPLAY            # show PUAE video in an SDL2 window
)

if(APPLE)
    target_compile_definitions(benefactor-harness PRIVATE USE_NAMED_SEMAPHORES)
endif()

# Function-like macros can't go in target_compile_definitions; force-include a compat header instead
target_compile_options(benefactor-harness PRIVATE
    -include ${CMAKE_CURRENT_SOURCE_DIR}/src/harness/harness_compat.h
)

target_include_directories(benefactor-harness PRIVATE
    # PUAE headers
    ${PUAE_EMU}
    ${PUAE_EMU}/include
    ${PUAE_ROOT}
    ${PUAE_RETRODEP}
    ${PUAE_RETRO}
    ${PUAE_DEPS}/7zip
    ${PUAE_COMM}/include
    ${PUAE_COMM}/include/compat/zlib
    # PC-port headers (MUST come after PUAE to avoid name clashes in system headers)
    src
    ${SDL2_INCLUDE_DIRS}
)

target_compile_options(benefactor-harness PRIVATE
    -std=gnu99
    -Wno-unused-result
    -Wno-stringop-overflow
    -Wno-error
    -Wno-implicit-function-declaration
    -Wno-incompatible-pointer-types
    -Wno-int-conversion
    -Wno-pointer-sign
    -Wno-discarded-qualifiers
    -g
)

target_link_libraries(benefactor-harness PRIVATE
    ${SDL2_LIBRARIES}
    m pthread dl
)
